--- a/css/stye.css
+++ b/css/stye.css
@@ -14,3 +14,109 @@
 .carro {
     margin-right: auto;
 }
+
+.cardImagen {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 90%;
+    height: 550px;
+}
+
+.headerImagen{
+width: 450px;
+height: 90%;
+}
+
+.cardPropio {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 90%;
+    height: 550px;
+}
+
+.cardTexto {
+    text-align: center;
+}
+
+.header__titulo {
+    background-color: #d87093;
+    font-size: x-large;
+    text-align: center;
+  }
+  .header__propio {
+    background-color: #d87093;
+  }
+  .header__buscar {
+    background-color: #ee82ee;
+  }
+  .header__links {
+    text-align:left;
+    margin-left: 400px;
+  }
+  .twitter {
+    color: #14171a;
+    font-size: 25px;
+    margin: 5px 5px 5px 5px;
+    text-align: center;
+  }
+  .twitter:hover {
+    color: white;
+    font-size: 27px;
+    margin: 5px 5px 5px 5px;
+  }
+  
+  .facebook {
+    color: #3b5998;
+    font-size: 25px;
+    margin: 5px 5px 5px 5px;
+    text-align: center;
+  }
+  .facebook:hover {
+    color: white;
+    font-size: 27px;
+    margin: 5px 5px 5px 5px;
+  }
+  
+  .whatsapp {
+    color: #ffffff;
+    font-size: 25px;
+    margin: 5px 5px 5px 5px;
+    text-align: center;
+  }
+  .whatsapp:hover {
+    color: white;
+    font-size: 27px;
+    margin: 5px 5px 5px 5px;
+  }
+  
+  .youtube {
+    color: #FF0000;
+    font-size: 25px;
+    margin: 5px 5px 5px 5px;
+    text-align: center;
+  }
+  .youtube:hover {
+    color: white;
+    font-size: 27px;
+    margin: 5px 5px 5px 5px;
+  }
+  
+  .instagram {
+    color: #C13584;
+    font-size: 25px;
+    margin: 5px 5px 5px 5px;
+    text-align: center;
+  }
+  .instagram:hover {
+    color: white;
+    font-size: 27px;
+    margin: 5px 5px 5px 5px;
+  }
+
+  .botonCarrito {
+    color: white;
+    background-color: red;
+    margin-right: 20px;
+    list-style:none;
+  }
+ 
